--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,11 @@ install:
   - rakudobrew build zef
   - zef --depsonly install .
 
+# Headless GUI Testing
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 script:
     - prove -v -e "perl6 -Ilib" t/ && zef install GTK::Scintilla
