Fix appveyor and travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ install:
   - zef build .
 
 script:
-    - prove -v -e "perl6 -Ilib" t/ && zef install GTK::Scintilla
+    - prove -v -e "perl6 -Ilib" t && zef install GTK::Scintilla
