--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,7 @@ build: off
 
 test_script:
   - prove -ve "perl6 -Ilib" t
-  - TEST_AUTHOR=1 prove -ve "perl6 -Ilib" t
+  - set TEST_AUTHOR=1 && prove -ve "perl6 -Ilib" t
   - zef install GTK::Scintilla
 
 shallow_clone: true
