--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ install:
   - zef build .
 
 script:
-    - prove -ve "perl6 -Ilib" t
-    - TEST_AUTHOR=1 prove -ve "perl6 -Ilib" t
-    - zef install GTK::Scintilla
+    - prove -ve "perl6 -Ilib"
+    - AUTHOR_TESTING=1 prove -ve "perl6 -Ilib"
+    - zef install .
